# open_codebase

./: .gitignore  .gitmodules  README.md
benchmark_lib/: CMakeLists.txt  README.md
benchmark_lib/include/basic_io/: basic_io_w.h
benchmark_lib/include/crypto/: crypto_util.h
benchmark_lib/src/: CMakeLists.txt
benchmark_lib/src/app/: CMakeLists.txt  basic_io_bench.cc  crypto_bench.cc  main.cc
benchmark_lib/src/basic_io/: CMakeLists.txt  basic_io_w.c  basic_io_w.cc
benchmark_lib/src/crypto/: CMakeLists.txt  crypto_util.cc
common_include/: c_include.h  c_my_data_struct.h  c_my_hash.h  c_my_heap.h  c_my_new_heap.h  cpp_include.h  define_const.h  my_log.h  my_util.h
config/: C.tom
file_sys_study/: .gitignore  CMakeLists.txt  README.md
file_sys_study/include/: chap_2_basic_api.h  define_const.h  my_log.h
file_sys_study/include/my_fs/: my_fs.h  my_simple_fs.h  my_simple_fs_inode_op.h  my_simple_fs_sb_op.h
file_sys_study/include/my_simplefs/: bitmap.h  dir_op.h  extent.h  file_op.h  inode_op.h  sb_op.h  simplefs.h  simplefs_bitmap.h  simplefs_dir_op.h  simplefs_file_op.h  simplefs_inode_op.h  simplefs_sb_op.h
file_sys_study/script/: basic_load_test.sh  mount_test.sh  mount_test_cleanup.sh  mount_test_setup.sh  test.py
file_sys_study/src/: CMakeLists.txt
file_sys_study/src/app/: CMakeLists.txt  main.c  main.cc  mkfs_simple.c
file_sys_study/src/basic_api/: CMakeLists.txt  chap_2_basic_api.c
file_sys_study/src/my_kernel_fs/: CMakeLists.txt  bitmap.c  dir_op.c  extent.c  file_op.c  hello.c  inode_op.c  my_simple_fs.c  my_simple_fs_mod.c  sb_op.c  simple_fs_mod.c  simplefs_bitmap.c  super_block_op.c
leetcode_c/: .gitignore  CMakeLists.txt  README.md
leetcode_c/include/: app_sys.h  app_sys_q.h  back_track_q.h  bfs_q.h  const.h  find_sort_q.h  greedy_dp_q.h  hash_q.h  math_q.h  my_hash_type.h  my_type.h  slide_two_q.h  stack_q.h  str_arr_q.h
leetcode_c/include/array/: arith_slices.h  best_time_sell_stock.h  best_time_sell_stock_2.h  car_pooling.h  cont_subarray_sum.h  daily_temperature.h  duplicate_zeros.h  find_anagrams.h  flight_bookings.h  largest_rectangle_his.h  max_width_ramp.h  sub_sum_divisible.h  sub_sum_k.h  two_sum.h
leetcode_c/include/backtrack/: combine.h  gen_parenth.h  letter_combine_of_phone_num.h  path_sum_2.h  permutation_seq.h  permutations.h  subsets.h
leetcode_c/include/bfs/: bus_routes.h  min_depth_binary_tree.h  shortest_bridge.h  word_break.h  word_ladder.h
leetcode_c/include/dfs/: max_area_of_island.h
leetcode_c/include/math/: add_two_numbers.h  duplicate_zeros.h  reverse_integer.h
leetcode_c/include/my_struct/: yzr_dl_list.h  yzr_stack.h
leetcode_c/include/prefix_sum/: make_sum_divisible_by_p.h
leetcode_c/include/prefix_sum_hash/: longest_consecutive_seq.h  lru_cache.h  make_sum_divisible_by_p.h
leetcode_c/include/sliding_win/: find_anagrams.h  long_palind_sub_str.h  long_sub_str_wo_repeat.h  max_con_ones_3.h  min_size_sub_array.h
leetcode_c/include/sorting/: car_fleet.h  merge_intervals.h  queue_rebuild_by_height.h
leetcode_c/include/stack/: valid_paren_str.h
leetcode_c/include/str/: compare_version.h  get_equal_sub_str.h  greatest_common_divisor_str.h  long_palind_sub_str.h  long_sub_str_wo_repeat.h  multiply_str.h  my_atoi.h  zigzag_conversion.h
leetcode_c/include/third/: utarray.h  utringbuffer.h  utstack.h  utstring.h
leetcode_c/include/two_pointer/: container_with_most_water.h  middle_linked_list.h
leetcode_c/script/: cleanup.sh  setup.sh
leetcode_c/src/: CMakeLists.txt
leetcode_c/src/app/: CMakeLists.txt  main.c  uthash_test.c  uthash_test_ptr_key.c
leetcode_c/src/app_sys/: CMakeLists.txt  lru_cache.c
leetcode_c/src/app_sys_q/: CMakeLists.txt  find_median_from_stream.c  kth_largest.c  lru_cache.c  top_k_freq.c
leetcode_c/src/back_track_q/: CMakeLists.txt  permutation.c  subset.c
leetcode_c/src/bfs_q/: CMakeLists.txt  level_order_trav.c  min_depth_bin_tree.c
leetcode_c/src/find_sort_q/: CMakeLists.txt  find_first_last_pos.c  merge_intervals.c  search_2d_mat.c  search_2d_mat_2.c  search_in_rotated.c  search_insert_pos.c
leetcode_c/src/greedy_dp_q/: CMakeLists.txt  climb_stair.c  jump_game.c  jump_game_2.c  max_pro.c  max_subarr.c  partition_lab.c  pascals_triangle.c
leetcode_c/src/hash_q/: CMakeLists.txt  group_anagrams.c  long_con_seq.c  max_slide_win.c  subarr_sum_k.c
leetcode_c/src/main/: CMakeLists.txt  main.c  test_main.c  test_main.cc  uthash_test_int_key.c  uthash_test_str_key.c
leetcode_c/src/math/: CMakeLists.txt  palindrome_num.c
leetcode_c/src/math_q/: CMakeLists.txt  first_miss_positive.c  plus_one.c  prod_except_self.c  rotate_image.c  set_matrix_zero.c  spiral_matrix.c  two_sum.c
leetcode_c/src/slide_two_q/: CMakeLists.txt  container_with_water.c  find_anagrams.c  long_substr_wo_repeat.c  min_win_substr.c  move_zero.c  rotate_arr.c  three_sum.c  trapping_rain.c
leetcode_c/src/stack_q/: CMakeLists.txt  daily_temp.c  decode_str.c  largest_rect_hist.c  min_stack.c  valid_paren.c  valid_paren_str.c
leetcode_c/test/: CMakeLists.txt  test_main.cc
note/: 可信设计模式.md  安全架构与设计原则.md  设计模式与应用.md  软件建模知识赋能.md  需求分析.md
task/: my_test_cluster_build_log
